--- a/.env.local.example
+++ b/.env.local.example
@@ -1,17 +1,17 @@
 # STRIPE
-STRIPE_API_KEY= # chave fornecida pelo STRIPE na guia Developers>API keys>Secret key
-NEXT_PUBLIC_STRIPE_PUBLIC_KEY= # chave fornecida pelo STRIPE na guia Developers>API keys>Publishable key
-STRIPE_WEBHOOK_SECRET= # chave fornecida pelo STRIPE CLI ao executar o comando stripe listen
+STRIPE_API_KEY=
+NEXT_PUBLIC_STRIPE_PUBLIC_KEY= 
+STRIPE_WEBHOOK_SECRET= 
 STRIPE_SUCCESS_URL=http://localhost:3000/posts
 STRIPE_CANCEL_URL=http://localhost:3000/
 
 # GITHUB
-GITHUB_CLIENT_ID= # chave fornecida pelo github em Settings>Developer settings>OAuth Apps>New OAuth App
-GITHUB_CLIENT_SECRET= # chave fornecida pelo github em Settings>Developer settings>OAuth Apps>New OAuth App
+GITHUB_CLIENT_ID= 
+GITHUB_CLIENT_SECRET= 
 
 # FAUNADB
-FAUNADB_KEY= # chave fornecida pelo FaunaDB na guia Security>Keys (Necessário criar chave)
+FAUNADB_KEY= 
 
 # PRISMIC CMS
-PRISMIC_ENDPOINT= # endereço fornecido pelo Prismic na guia Settings>API & Security>API Endpoint
-PRISMIC_ACCESS_TOKEN= # chave fornecida pelo Prismic na guia Settings>API & Security>Generate an Access Token>Permanent access tokens
+PRISMIC_ENDPOINT= 
+PRISMIC_ACCESS_TOKEN= 
