--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "test": "jest"
   },
   "dependencies": {
@@ -25,14 +26,13 @@
     "stripe": "^8.176.0"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^1.1.3",
     "@testing-library/dom": "^8.11.1",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^12.1.2",
     "@types/node": "^16.9.1",
     "@types/react": "18.0.1",
     "babel-jest": "^27.4.2",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
     "jest-dom": "^4.0.0",
