--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/prismic-dom": "^2.1.1",
     "axios": "^0.21.4",
     "faunadb": "^4.4.1",
-    "next": "^11.1.3",
+    "next": "^13.0.2",
     "next-auth": "^3.29.0",
     "prismic-dom": "^2.2.6",
     "react": "17.0.2",
@@ -33,6 +33,8 @@
     "@types/node": "^16.9.1",
     "@types/react": "18.0.1",
     "babel-jest": "^27.4.2",
+    "eslint": "8.27.0",
+    "eslint-config-next": "13.0.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
     "jest-dom": "^4.0.0",
