--- a/package.json
+++ b/package.json
@@ -11,34 +11,41 @@
     "test": "jest"
   },
   "dependencies": {
-    "@prismicio/client": "^5.1.0",
-    "@stripe/stripe-js": "^1.18.0",
-    "@types/prismic-dom": "^2.1.1",
-    "axios": "^0.21.4",
-    "faunadb": "^4.4.1",
-    "next": "^13.0.2",
-    "next-auth": "^3.29.0",
-    "prismic-dom": "^2.2.6",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.2.0",
-    "sass": "^1.41.0",
-    "stripe": "^8.176.0"
+    "@prismicio/client": "^6.7.1",
+    "@prismicio/helpers": "^2.3.5",
+    "@prismicio/react": "^2.5.0",
+    "@prismicio/slice-simulator-react": "^0.2.2",
+    "@stripe/stripe-js": "^1.38.1",
+    "axios": "^0.27.2",
+    "faunadb": "^4.7.0",
+    "next": "12.3.1",
+    "next-auth": "^4.10.3",
+    "prismic-dom": "^2.2.7",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "sass": "^1.54.9",
+    "stripe": "^10.11.0"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.1.3",
     "@testing-library/dom": "^8.11.1",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^12.1.2",
-    "@types/node": "^16.9.1",
-    "@types/react": "18.0.1",
+    "@types/jest": "^29.2.2",
+    "@types/next-auth": "^3.15.0",
+    "@types/node": "18.7.18",
+    "@types/prismic-dom": "^2.1.1",
+    "@types/react": "18.0.20",
+    "@types/react-dom": "18.0.6",
     "babel-jest": "^27.4.2",
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.2",
+    "eslint": "8.23.1",
+    "eslint-config-next": "12.3.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
     "jest-dom": "^4.0.0",
     "jest-mock": "^29.3.1",
-    "typescript": "^4.4.3"
+    "slice-machine-ui": "^0.4.2",
+    "typescript": "4.8.3"
   }
 }
